Verify Registered User

--- a/frontend/src/components/ValidatedInput/ValidatedInput.css
+++ b/frontend/src/components/ValidatedInput/ValidatedInput.css
@@ -22,3 +22,21 @@
     outline: none;
     border: none;
 }
+
+.validated-date-selector {
+    
+    width: 100%;
+}
+
+.validated-input-remainder {
+    position: absolute;
+    top: 5px;
+    right: 10px;
+    font-size: 13px;
+    font-weight: 500;
+    color: #657786;
+}
+
+.dropdown-container {
+    margin-bottom: 20px;
+}
